# auto-trader

./: .gitignore  backtest.py  build_candles_test.py  pyproject.toml
broker/: metrics_engine.py  virtual_broker.py
implementations/: example_strategy.py  ta_bollinger_strategy.py  talib_macd_strategy.py  talipp_rsi_strategy.py
models/: candles.py  forming_candle.py  position.py  timeframe.py
strategies/: strategy.py  strategy_manager.py
tests/: test_backtest_ta.py  test_backtest_talib.py  test_backtest_talipp.py  test_candles_conversion.py
