[project]
name = "auto-trader"
version = "0.1.0"
description = "Algorithmic trading backtesting framework"
authors = [
    {name = "sergiocopeto"}
]
requires-python = "^3.14"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
