[project]
name = "auto-trader"
version = "0.1.0"
description = "Algorithmic trading backtesting framework"
authors = [
    {name = "sergiocopeto"}
]
requires-python = "^3.14"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
]

[project.optional-dependencies]
talipp = ["talipp (>=2.7.0,<3.0.0)"]
ta = ["ta (>=0.11.0,<1.0.0)"]
talib = ["TA-Lib (>=0.6.3,<1.0.0)"]
all-ta = [
    "talipp (>=2.7.0,<3.0.0)",
    "ta (>=0.11.0,<1.0.0)",
    "TA-Lib (>=0.6.3,<1.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
